<resources>
    <string name="app_name">MagicCardManager</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="card_name">Card name</string>
    <string name="card_power">Card power</string>
    <string name="at_least">At least</string>
    <string name="at_most">At most</string>
    <string name="search_magic_cards">Search Magic cards</string>
    <string name="set">Set</string>
    <string name="color">Color</string>
    <string name="card_toughness">Toughness</string>
    <string name="search">Search</string>
    <string name="title_card_list">Search results</string>
    <string name="title_card_detail">Card Detail</string>
    <string name="error_network_load_failed">Data loading failed, using local data</string>
    <string name="card_detail_as_an_image">Card detail as an image</string>
    <string name="set_name">Set name</string>
    <string name="can_t_find_an_image_for_this_card">Can\'t find an image for this card</string>
    <string name="card_type">Card type</string>
    <string name="paging_label">Page %d/%d</string>
    <string name="previous_page">Previous page</string>
    <string name="next_page">Next page</string>
    <string name="warning_network_error_incomplete_results">Warning, network error detected, results might be incomplete</string>
    <string name="error_no_items_found_for_criteria">No items found for given criteria</string>
    <string name="image_download_failed">Image download failed</string>
    <string name="all_possible">All possible</string>
    <string name="loading_with_dots">Loading...</string>
</resources>
