<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                tools:context=".activity.CardListActivity">

    <TextView
        android:id="@+id/text_warning_network_error"
        android:textColor="@color/text_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:drawableLeft="@drawable/ic_round_report_problem"
        android:drawablePadding="4dp"
        android:drawableStart="@drawable/ic_round_report_problem"
        android:padding="5dp"
        android:text="@string/warning_network_error_incomplete_results"/>

    <LinearLayout
        android:id="@+id/layout_paging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_page_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/paging_label"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_page_prev"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/previous_page"/>

            <Button
                android:id="@+id/button_page_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/next_page"/>


        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/card_list"
        android:name="cz.jirix.magiccardmanager.activity.CardListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_paging"
        android:layout_below="@id/text_warning_network_error"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/card_list_content"/>


    <LinearLayout
        android:id="@+id/layout_loading_new_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background_darker"
        android:layout_centerInParent="true"
        android:padding="15dp"
        android:orientation="horizontal">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_darker"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background_darker"
            android:layout_gravity="center"
            android:text="@string/loading_with_dots"/>

    </LinearLayout>


    <TextView
        android:id="@+id/text_card_list_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_paging"
        android:layout_below="@id/text_warning_network_error"
        android:gravity="center"
        android:text="@string/error_no_items_found_for_criteria"/>


</RelativeLayout>